--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "cloud-disk",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.ts"
+    "server": "ts-node-dev index.ts"
   },
   "keywords": [
     "cloud",
@@ -15,16 +15,19 @@
   "author": "Korev Dmitriy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "mongoose": "^5.12.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
-    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
 }
